# docker-context-guard

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  LICENSE.md  MANIFEST.in  README.md  action.yml  docker_context_guard.py  pyproject.toml
.github/workflows/: ci.yml
docs/: launch-drafts.md  launch-plan.md  product-brief.md  release-manifest.md  release-notes-v0.1.0.md  validation-report.md
examples/risky-node/: Dockerfile  local.env  package.json  server.js
scripts/: prepublish_gate.py
tests/: test_docker_context_guard.py
